# trading-engine

./: CMakeLists.txt
include/: Websocket.hpp
include/orderbook_layers/: exchange.hpp  order.hpp  orderbook.hpp  orderlist.hpp  pricelevels.hpp  strategy.hpp
src/: main.cpp  orderbook.cpp
tests/: test_order.cpp  test_orderbook.cpp  test_partial_fills.cpp
